--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Nidhi Kachhi Portfolio Bag</title>
+	<title>Nidhi Kachhi Portfolio</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -145,7 +145,7 @@
 					<div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end"
 						data-scrollax-parent="true">
 						<div class="one-third js-fullheight order-md-last img"
-							style="background-image:url(images/bg_2_my.png);">
+							style="background-image:url();">
 							<div class="overlay"></div>
 						</div>
 						<div class="one-forth d-flex  align-items-center ftco-animate"
@@ -191,7 +191,9 @@
 
 								<br>
 								<br>
-								<h2>A Data Analyst</h2>
+								<h2>Aspiring Data Analyst</h2>
+            
+
 								<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 								<!-- <br> -->
 								<p>
@@ -222,7 +224,7 @@
 								<div class="row">
 									<div class="col-sm-6 col-md-5">
 										<div class="about-img">
-											<img src="images\bg_2_my.png" class="img-fluid rounded b-shadow-a" alt="">
+											<img src="images\about_me.png" class="img-fluid rounded b-shadow-a" alt="">
 										</div>
 									</div>
 									<!-- Details next to profile image -->
@@ -372,7 +374,7 @@
 
 			<div class="row justify-content-center mt-5">
 				<div class="col-md-6 text-center ftco-animate">
-					<p><a href="Resume Nidhi Kachhi DA_DS.pdf" class="btn btn-primary py-4 px-5">Download CV</a></p>
+					<p><a href="Resume Nidhi Kachhi.pdf" class="btn btn-primary py-4 px-5">Download CV</a></p>
 				</div>
 			</div>
 		</div>
@@ -538,7 +540,7 @@
 							<span class="icon-globe"></span>
 						</div>
 						<h3 class="mb-4">Download Resume</h3>
-						<p><a href="Resume Nidhi Kachhi DA_DS.pdf">resumelink</a></p>
+						<p><a href="Resume Nidhi Kachhi.pdf">resumelink</a></p>
 					</div>
 				</div>
 
